added javascript to the page

--- a/index.html
+++ b/index.html
@@ -158,6 +158,13 @@
     <a href="https://github.com/eFranchesca/favoriteFood" target="_blank">Open source coded</a> with ❤️ by Eva Godfrey</div>
   </div>    
 
+<script>
+  let favoriteBbq = prompt("What is your favorite barbeque style?");
+    if(favoriteBbq === "smoked") 
+      { alert ("I love foods that have been smoked also!❤️🤩")}
+    else alert (`I will have to try ${favoriteBbq} soon.😎`)
+
+</script>
 
 </body>
 </html>
