--- a/index.html
+++ b/index.html
@@ -161,8 +161,15 @@
 <script>
   let favoriteBbq = prompt("What is your favorite barbeque style?");
     if(favoriteBbq === "smoked") 
-      { alert ("I love foods that have been smoked also!❤️🤩")}
-    else alert (`I will have to try ${favoriteBbq} soon.😎`)
+      { alert ("I love foods that have been smoked also!❤️🤩");}
+
+    if(favoriteBbq === "smoked meats") 
+      { alert ("I love foods that have been smoked also!❤️🤩");}
+
+    if(favoriteBbq === "anything smoked") 
+      { alert ("I love foods that have been smoked also!❤️🤩");}
+
+    else { alert (`I will have to try ${favoriteBbq} soon.😎`);}
 
 </script>
 
