--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
     }
 
     h4 {
-      margin-top: 30px;
-      padding-top: 20px;
-      margin-bottom: 20px;
+      margin-top: 20px;
+      padding-top: 100px;
       text-decoration: underline;     
     }
     
@@ -52,13 +51,10 @@
     img {
       max-width: 300px;
       border-radius: 5px;
+      margin-top: 15px;
+      margin-bottom: 25px;
     }
-
-    button {
-      margin-top: 30px;
-      margin-bottom: 20px;
-    }
-
+    
     a {
       color: aliceblue;
       text-decoration: none;
@@ -98,7 +94,7 @@
 
       <div class="content">
         <div class="text-center">
-          <h4 title="In the American tradition, there are four prominent BBQ regions: Kansas City, Carolina, Memphis, and Texas. These four barbeque styles represent the most recognized regional renditions of smoked meat. Their prefered cuts of meat and choice of sides vary from region to region. You will find each style's techniques, rubs, and sauces copied across the U.S."
+          <h4 title="In the American tradition, there are four prominent BBQ regions: Kansas City, Carolina, Memphis, and Texas. These four barbeque styles represent the most recognized regional renditions of smoked meat. Their prefered cuts of meat and choice of sides vary from region to region. You will find each style's techniques, rubs, and sauces copied across the U.S." 
               >American BBQ</h4>
             <img src="https://st4.depositphotos.com/1008041/26378/i/450/depositphotos_263787664-stock-photo-boneless-beef-ribs-grilling-over.jpg" 
                  class="zoom-pictures"
@@ -157,18 +153,17 @@
 
   let favoriteBbq = prompt("What is your favorite barbeque style?");
 
+  
+
     if (favoriteBbq === "smoked") 
        { alert ("I love foods that have been smoked also!❤️🤩");}
-
-    if (favoriteBbq === "smoked meats") 
-       { alert ("I love foods that have been smoked also!❤️🤩");}
-
-    if (favoriteBbq === "anything smoked") 
-       { alert ("I love foods that have been smoked also!❤️🤩");}
-
-    if (favoriteBbq != null) 
-      { alert ("If you don't like barbequed foods that's ok, just type in smoked to see what happens.😉");}  
-
+    else if 
+       (favoriteBbq === "grilled") 
+       { alert ("I love foods that have been grilled also!❤️🤩");}
+    else if
+       (favoriteBbq === "take out") 
+       { alert ("I really appriceate when someone else does all the hard work!❤️🤩");}
+ 
     else { alert (`I will have to try ${favoriteBbq} soon.😎`);}
   
   
